--- a/VRChat/38/1140838.html
+++ b/VRChat/38/1140838.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BeuGXZd1OI4TOH4pDsUgCwe6VuyMYFWhBhq8mUYbLcs="></script>
+    "aGJwYFsDlT6Dwpy2srmWeIkr1wo41JRkRaYphxLiAus="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"すたんだーどふぉーすてきなもの","description":"某シューティングゲームのアレっぽいもの\nポリゴン数　1501　\nマテリアル数　5\n\nUVは自動展開したものそのままなので、サブスタンスペインター等でのテクスチャ作成をお勧めします。\n\n・改変:可\n・商用利用:不可\n・再配布:不可\n・バイド物質含有率：高\n\n\n\n","url":"https://booth.pm/ja/items/1140838","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9d628343-8c42-4954-af0a-3cec6c0cf6d7/i/1140838/285a4e8e-9158-4c4c-89f5-8b584f723c66_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BeuGXZd1OI4TOH4pDsUgCwe6VuyMYFWhBhq8mUYbLcs="></script>
+    nonce="aGJwYFsDlT6Dwpy2srmWeIkr1wo41JRkRaYphxLiAus="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1140838/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1140838/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
