--- a/VRChat/28/1140628.html
+++ b/VRChat/28/1140628.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "83VDrxMok0hI1EpXN/JyycBwFAQck4Er9UIigtcfcpQ="></script>
+    "hnCZ264iuCgjTQ+nx6/s1rsOv8CZ4jQPnXqNYBxV7bY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"80cm列車砲リーベ(Schwerer Liebe)","description":"3Dmodelはこちらで確認できます。\nhttps://sketchfab.com/models/19d3bbe737ab4928b04345d98ca1eee0\n\n\u003c詳細\u003e\n2K(2048×2048)テクスチャー,三角面数77336 \n2K(2048×2048)テクスチャー,三角面数214(80cm弾丸) \n2K(2048×2048)テクスチャー,三角面数1102(運搬台) \nUnity,VRChat用にフルスクラッチで作った列車砲80cmです。 \n\n\u003c説明\u003e\n…かつて2台のみ生産された列車砲の後継機。Liebeという名を冠している。\n\n\u003c規約\u003e \nこのモデル自体の著作権は放棄いたしませんが\nこのモデルの個人利用,商用利用,改変を自由に許可します。\nVRChat-WorldやAvatarとしてのアップロードを許可します。\nこのモデルデータが取り出せる状態での2次配布・誹謗中傷等への使用は禁止します。\n\n\n\u003c更新\u003e\n1メッシュ1マテリアルにパーツ分けしました。\nUnlitとPBRのPrefabが同梱されていなかったため修正しました。\n\t\t\t\t\t\t\t\t\t-2019.3.10 Lovedelic","url":"https://booth.pm/ja/items/1140628","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/96c985f2-7e84-49cd-a2f3-277cef2c8d4d/i/1140628/a70a42d3-c605-48b3-929d-955903547e7d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="83VDrxMok0hI1EpXN/JyycBwFAQck4Er9UIigtcfcpQ="></script>
+    nonce="hnCZ264iuCgjTQ+nx6/s1rsOv8CZ4jQPnXqNYBxV7bY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1140628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1140628/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               106
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
