--- a/VRChat/35/1139735.html
+++ b/VRChat/35/1139735.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1mWdcv/qOwHeiHiqB7iVifFcGh3Xz/PUomHxB3RjDIU="></script>
+    "tOHzYLO82c2MdL0xFueyog207+Ae3ydJhcFQFQraGvQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定 ケモノアバター　『トラコ』","description":"製作者：キウィー\n\n概要\n本モデルはVRChatでの使用を想定したメスのトラ獣人のオリジナルモデル『トラコ』です。\nUnityのHumanoid形式に対応しております。\nVRChat以外での利用も可能です。詳しくは利用規約をお読みください。\n\nVRChat向けにセットアップしたUnity Packageを同梱しています。\n予めVRCSDKと、必要に応じてDynamicBoneをインポートしておくことですぐにVRChatにアップロードが可能です。\n\n\n着物のテクスチャには以下の素材を使わせていただきました。\n\"和柄素材6\" by Copyright 2013 Borbone\nhttp://borbone.info\n\"【フリー素材】*和柄5\" by Copyright 2014 柳猫\nhttps://www.pixiv.net/member.php?id=4004121","url":"https://booth.pm/ja/items/1139735","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/e1cb2816-75d6-4f1f-9f88-6087b87ed648/i/1139735/f3ea1234-377b-4df1-ae78-e74241c9de1b_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1mWdcv/qOwHeiHiqB7iVifFcGh3Xz/PUomHxB3RjDIU="></script>
+    nonce="tOHzYLO82c2MdL0xFueyog207+Ae3ydJhcFQFQraGvQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139735/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
