--- a/VRChat/94/1122494.html
+++ b/VRChat/94/1122494.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9ehVXRC5Ypi8IZ7nWE3huSoFxnHSl9EuFDch1of55us="></script>
+    "2An3dJdc3t9L0D+mwcKuYuLk5ztVvND+t99XSSN0M78="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【FREE/無料】クリスマス衣装【VRoid Texture】","description":"VRoidStudioは最新版をお使いください。\nPlease use the latest version of VRoidStudio.\n\n無料版・支援用とも中身は同じです。\nThe contents are the same for both free and support.\n\nvroidcustomitemのインポート・エクスポートの使い方\n日本語：https://vroid.pixiv.help/hc/ja/articles/7467455312409\n\nHow to import and export custom items.\nEnglish：https://vroid.pixiv.help/hc/en-us/articles/7467455312409","url":"https://booth.pm/ja/items/1122494","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/70a52f05-5284-4b89-97ca-21c99c18b862/i/1122494/5d32b670-c9f8-444b-8f88-4d3d2722337b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9ehVXRC5Ypi8IZ7nWE3huSoFxnHSl9EuFDch1of55us="></script>
+    nonce="2An3dJdc3t9L0D+mwcKuYuLk5ztVvND+t99XSSN0M78="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,10 +159,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1122494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              983
+                              984
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1122494/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              983
+                              984
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
