--- a/VRChat/10/1139710.html
+++ b/VRChat/10/1139710.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Pus66/5yS6BZKalR2fl2wEJYh6xmM/lYyNZ23jcr4S8="></script>
+    "Lbwn+y6YgWuWEdGspTNTK9zEEonoyAkmbg80QMCwKI4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"I am Legendary Poor 3D Model","description":"I am Legendary Poorな3Dモデルです。\nローポリ版は1818ポリゴン、ハイポリ版は7276ポリゴンです。\nテクスチャー以外にNormalMapがついてます。\n※通常版とBoost版に違いはありません\n","url":"https://booth.pm/ja/items/1139710","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b3160b6b-8c76-4cbb-9a5b-31c80cca3aca/i/1139710/d7aa219f-70c9-45c1-905c-f6a080336f0e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Pus66/5yS6BZKalR2fl2wEJYh6xmM/lYyNZ23jcr4S8="></script>
+    nonce="Lbwn+y6YgWuWEdGspTNTK9zEEonoyAkmbg80QMCwKI4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139710/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139710/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               41
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
