--- a/VRChat/88/1139288.html
+++ b/VRChat/88/1139288.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "66I6I8O34fu7yxJQvJtpKmd4YN8GkLuszQ0J0q+thNQ="></script>
+    "0xGcJroE++vtysty/5Zz7K7K+T0b6rHOCWsX6F2+7Ec="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"螺旋剣槍 \"The Spirale\"","description":"※規約全文は下にあります\nThere is terms of use under of the page.\n\nある時、見つけた２つの棒状のさびた塊…研磨し、復元された一振りを見て、我が身が震えるのを感じた。\nそれ以来、衝動に駆られるようにその武器を見て、再解釈して、自らの思いを込めて投影し―\n\n螺旋の鋭い刀身を持つ、刺突剣術に特化した細身の片手剣です。\nAlbedo, Speculer, NormalのPBRテクスチャと、1枚に質感をベイクしたColorテクスチャの2種類を用意しております\n\nSketchfabで3Dデータの閲覧をすることもできます。\n\nポリゴン数：△1636\n\n本体サイズ\n全長：1.1m(110cm)\n横幅：0.15m(10.5cm)","url":"https://booth.pm/ja/items/1139288","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1139288/293bac92-4ee1-46f5-99fa-e0e603e8943d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="66I6I8O34fu7yxJQvJtpKmd4YN8GkLuszQ0J0q+thNQ="></script>
+    nonce="0xGcJroE++vtysty/5Zz7K7K+T0b6rHOCWsX6F2+7Ec="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -123,6 +120,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -137,7 +136,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -179,7 +179,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139288/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               73
@@ -194,14 +194,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139288/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               73
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
