--- a/VRChat/87/1139587.html
+++ b/VRChat/87/1139587.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xkqLLy5TQvsRbJQd+fR84G1mIykckI//zxgNKucj2pc="></script>
+    "ptSvh/v4CLssnf3+rcsdSbUVaqmz3527fRopzgrqAmY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCアルバムワールド作成キット album_world_kit_v1.0.0【VRChat向けUnityPackage】","description":"VRChat用アルバムワールド作成キット\nalbum_world_kit_v1.0.0","url":"https://booth.pm/ja/items/1139587","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a33b7662-9a73-4f2e-b2bf-ce41a2923250/i/1139587/178bece8-9815-4d87-8d5c-11d7c3856b82_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xkqLLy5TQvsRbJQd+fR84G1mIykckI//zxgNKucj2pc="></script>
+    nonce="ptSvh/v4CLssnf3+rcsdSbUVaqmz3527fRopzgrqAmY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -164,7 +166,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1139587/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               287
@@ -179,14 +181,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1139587/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               287
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
